<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/add_function"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center_horizontal"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>
    <EditText

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/input_1"
            android:ems="10"
            android:id="@+id/et_input_1"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/input_2"
            android:ems="10"
            android:id="@+id/et_input_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_input_1" android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <Button
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit"
            app:layout_constraintTop_toBottomOf="@+id/et_input_2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tv_result"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:gravity="center|center_horizontal"/>
    <ProgressBar

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_submit"
            android:layout_marginTop="32dp" style="@style/Widget.AppCompat.ProgressBar"/>
</androidx.constraintlayout.widget.ConstraintLayout>