<resources>
    <string name="app_name">Kotlin MVVM</string>
    <string name="add">Add</string>
    <string name="multiply">Multiply</string>
    <string name="prime_number">Prime Number</string>
    <string name="fibonacci_number">Fibonacci Number</string>
    <string name="input_1">First value</string>
    <string name="input_2">Second value</string>
    <string name="fibonacci_function">Fibonacci Function</string>
    <string name="add_function">Add Function</string>
    <string name="prime_function">Prime Function</string>
    <string name="multiply_function">Multiply Function</string>
    <string name="input_1_empty">Input 1 Empty</string>
    <string name="input_2_empty">Input 2 Empty</string>
    <string name="result">Result</string>
</resources>
